# YouTubeProjects

./: README.md  genie.js  geoguessr.ipynb  package-lock.json  package.json  requirements.txt  wikigraph.ipynb
CreateVideo/: Dockerfile  lambda_function.py  requirements.txt
CreateVideo/resources/clips/: get_clips.py
Keyboard/: keyboard.ipynb
UpdateAccessKey/: lambda_function.py
examples/csvs_balls/: 0.csv  1.csv
examples/csvs_hits/: 0.csv  1.csv
examples/csvs_pitches/: 0.csv  1.csv
extract_data/: Cargo.toml
extract_data/extract_categories/: Cargo.toml
extract_data/extract_categories/src/: main.rs
extract_data/extract_links/: Cargo.toml
extract_data/extract_links/src/: main.rs
extract_data/extract_pages/: Cargo.toml
extract_data/extract_pages/src/: main.rs
record/: record_pitch.py  record_swing.py
record/pitch_csvs/: README.md
record/swing_csvs/: README.md
record/swing_ims/: README.md
resources/: baseball.ini
test/: play.py
train/: train_pitch.ipynb
train/.ipynb_checkpoints/: train_pitch-checkpoint.ipynb  train_swing-checkpoint.ipynb
