[package]
name = "extract_categories"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bzip2 = "0.4.4"
csv = "1.3.0"
parse_mediawiki_dump_reboot = "1.0.1"
regex = "1.10.2"
unicode-case-mapping = "0.5.0"
